Fix incorrect double parsing

In Qt5 QLocale::toDouble() function can return non null value for
incorrect input. See QTBUG-71256 for details.

Fix #105